testsuite/poke.pkl/union-diag-6.pk
/* { dg-do compile } */

/* Declarations are only allowed in unions if they appear before any
   of the alternatives. */

fun pred = int: { return 0; }

type Foo = union
 {
   int bar : pred;
   type je = int[bar]; /* { dg-error "" } */
   int jorl;
 };
